[package]
name = "blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-graphql = "5.0.10"
async-graphql-axum = "5.0.10"
axum = "0.6.18"
log = "0.4.19"
serde_json = "1.0.97"
tokio = { version = "1.28.2", features = ["full"] }
uuid = { version = "1.3.4", features = ["v7", "fast-rng", "macro-diagnostics", "v4"] }
