[package]
name = "blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-graphql = "5.0.10"
async-graphql-axum = "5.0.10"
async-trait = "0.1.68"
axum = "0.6.18"
log = "0.4.19"
serde_json = "1.0.97"
sqlx = { version = "0.6.3", features = ["mysql", "runtime-tokio-rustls"] }
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
tower-http = { version = "0.4.1", features = ["cors"] }
uuid = { version = "1.3.4", features = [
    "v7",
    "fast-rng",
    "macro-diagnostics",
    "v4",
] }

[[bin]]
name = "main"
path = "src/bin/main.rs"
[[bin]]
name = "gen-schema"
path = "src/bin/gen-schema.rs"
