[package]
name = "blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-graphql = "5.0.10"
async-graphql-axum = "5.0.10"
async-trait = "0.1.68"
axum = "0.6.18"
axum-extra = { version = "0.7.5", features = ["cookie"] }
dotenvy = "0.15.7"
jsonwebtoken = "8.3.0"
log = "0.4.19"
oauth2 = "4.4.1"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["rustls-tls", "json"] }
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.97"
sqlx = { version = "0.6.3", features = [
    "mysql",
    "runtime-tokio-rustls",
    "macros",
] }
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
tower-cookies = "0.9.0"
tower-http = { version = "0.4.1", features = ["cors"] }
uuid = { version = "1.3.4", features = [
    "v7",
    "fast-rng",
    "macro-diagnostics",
    "v4",
] }
